Fixes badge spacing

--- a/usptostrap/less/_badges.less
+++ b/usptostrap/less/_badges.less
@@ -2,5 +2,5 @@
 
 .badge {
     padding-top: 2px;
-    padding-bottom: 4px;
+    padding-bottom: 3px;
 }
